Add downloaded data files to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -133,4 +133,6 @@ oshdb-contributions-parquet-data/
 
 # Ignore hexagrid file
 shp/origin_downloaded_layers/isea_grid_with_buildings.gpkg
-downloaded-data-json/roads_geojson-world-states.json
+downloaded-data-json/roads_world-states_18-21.json
+downloaded-data-json/blds_world-states_18-21.json
+geojson-regions/geojson-world-states-ohsome.geojson
