Edit ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -131,8 +131,9 @@ dmypy.json
 # Ignore folder path with large parquet files
 oshdb-contributions-parquet-data/
 
-# Ignore hexagrid file
+# Ignore files/foldres
 shp/origin_downloaded_layers/isea_grid_with_buildings.gpkg
 downloaded-data-json/roads_world-states_18-21.json
 downloaded-data-json/blds_world-states_18-21.json
 geojson-regions/geojson-world-states-ohsome.geojson
+oshdb-contributions-parquet-data/
