Global and Local Spatial Autocorrelation

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,4 @@ downloaded-data-json/roads_world-states_18-21.json
 downloaded-data-json/blds_world-states_18-21.json
 geojson-regions/geojson-world-states-ohsome.geojson
 oshdb-contributions-parquet-data-test/
+.Rproj.user
